--- a/client/src/styles/_view-profile.scss
+++ b/client/src/styles/_view-profile.scss
@@ -27,18 +27,29 @@
     z-index:1;
     perspective: 600px;
     transition: $transition_card;
+    padding-top: 60px;
+
+    @include profile-card-breakpoint {
+      padding-top: 0;
+    }
 
     &__edit {
       position: absolute;
-      top: 0;
+      bottom: 0;
       right: 0;
       padding: 12px 15px;
       border-radius: 30px;
-      margin: 20px;
+      margin: 10px;
       background: $color_aqua;
       border: none;
       color: rgba(255,255,255,.8);
       box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+
+      @include profile-card-breakpoint {
+        top: 0;
+        bottom: auto;
+        margin: 20px;
+      }
 
       &:hover, &:focus, &:active {
         background: $color_aqua;
@@ -59,69 +70,97 @@
 
     }
 
+    &__top-wrap {
+      display: flex;
+      @include profile-card-breakpoint {
+        display: block;
+      }
+    }
+
     &__image-wrap {
       width: 100%;
-      margin-top: 20px;
-      text-align: center;
-      padding: 20px 20px 0 20px;
-      /* transition: $transition_card; */
+      padding: 10px;
+      flex-basis: 40%;
+      @include profile-card-breakpoint {
+        margin-top: 20px;
+        text-align: center;
+        padding: 20px 20px 0 20px;
+      }
       }
 
     &__image {
+      width: 100%;
       border-radius: 100%;
-      width: 50%;
       height: auto;
       margin: 0 auto;
       border: 2px solid rgba(255,255,255,.9);
-      /* transition: $transition_card; */
+      @include profile-card-breakpoint {
+        width: 50%;
+        }
     }
 
     &__icon--avatar {
       height: 100%;
       width: auto;
       color: rgba(255,255,255,.4);
-      /* transition: $transition_card; */
     }
 
     &__text-wrap {
-      padding: 15px 30px 10px 30px;
-      /* transition: $transition_card; */
+      padding: 20px 0 5px 0;
+      @include profile-card-breakpoint {
+        padding: 15px 30px 10px 30px;
+      }
     }
 
     &__name {
       font-weight: 700;
-      text-align: center;
-      font-size: 30px;
-      /* transition: $transition_card; */
+      font-size: 20px;
+      color: $color_gray_text;
+      @include profile-card-breakpoint {
+        text-align: center;
+        font-size: 30px;
+      }
     }
 
     &__username {
-      font-weight: 400;
-      text-align: center;
-      font-size: 22px;
-      /* transition: $transition_card; */
+      font-weight: 700;
+      font-size: 18px;
+      color: $color_gray_lighter;
+      @include profile-card-breakpoint {
+        font-weight: 400;
+        text-align: center;
+        font-size: 22px;
+      }
     }
 
     &__location-wrap {
       display: flex;
-      justify-content: center;
-      padding: 10px;
-      /* transition: $transition_card; */
+      justify-content: flex-start;
+      padding: 10px 10px 10px 0;
+      @include profile-card-breakpoint {
+        justify-content: center;
+        padding: 10px;
+      }
     }
 
     &__icon--location {
         color: $color_gray_lighter;
-        padding: 2px 9px 0 0;
-        font-size: 18px;
-        /* transition: $transition_card; */
+        padding: 4px 6px 0 0;
+        font-size: 12px;
+        @include profile-card-breakpoint {
+          font-size: 18px;
+          padding: 2px 9px 0 0;
+        }
     }
 
     &__location {
       font-weight: 100;
       font-family: 'Alegreya Sans SC', sans-serif;
       text-transform: lowercase;
-      font-size: 18px;
-      /* transition: $transition_card; */
+      font-size: 16px;
+      @include profile-card-breakpoint {
+        font-size: 18px;
+      }
     }
 
     &__card-nav {
@@ -181,23 +220,26 @@
         padding-left: 6px;
         font-family: inherit;
         font-size: inherit;
+        font-weight: 300;
         text-transform: inherit;
+        color: $color_gray_lighter;
         /* transition: $transition_card; */
 
 
         &:hover, &--active {
           padding-left: 6px;
-          color: inherit;
-          font-weight: 400;
+          color: $color_gray_darker;
+          font-weight: 300;
           transition: all 300ms ease-in-out;
         }
       }
 
 
     &__card-body {
-      padding: 20px 20px 12px 20px;
-      background: rgba(255,255,255,.6);
-      /* transition: $transition_card; */
+      padding: 10px 10px 2px 10px;
+      @include profile-card-breakpoint {
+        padding: 20px 20px 12px 20px;
+      }
     }
 
     &__card-footer {
@@ -384,6 +426,11 @@
 
 }
 
+#back .full__name, #back .full__username {
+    text-align: center;
+    padding: 0 10px;
+  }
+
 .tag-value {
   color: $color_gray_text;
   display: inline-block;
@@ -476,12 +523,19 @@
   height:100%;
   width:100%;
   transform-style:preserve-3d;
-  backface-visibility:hidden;
-  background: rgba(255,255,255,.75);
-  border-radius: 10px;
+  backface-visibility:hidden !important;
+  -webkit-backface-visibility:hidden !important;
+  -moz-backface-visibility:hidden !important;
+  background: white;
+  border-radius: 0;
   box-shadow: 0 16px 24px rgba(0, 0, 0, 0.4);
   transition: .5s ease-in-out;
   position: relative;
+
+  @include profile-card-breakpoint {
+    border-radius: 10px;
+    background: rgba(255,255,255,.75);
+  }
 }
 
 .back {
